--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,40 +1,59 @@
 <div class="bg-gray-900 text-white flex justify-center items-center h-screen text-center">
-    <div class="text-white text-5xl absolute top-6 right-6" (click)="goStart()">
-        X
-    </div>
+    <button class="text-white text-5xl absolute top-6 right-6 hover:scale-125" (click)="goStart()">
+        <fa-icon [icon]="faHome" 
+          class="text-green-500 text-2xl m-auto border-4 border-gray-800 p-2 rounded-xl">
+        </fa-icon>
+    </button>
+      
     <!-- Inicio-->
-    <div *ngIf="!showMoods && !showCategories && !showOptions">
-        <h1 class="text-5xl font-bold text-cyan-400 mb-4 animate-bounce">Higher or Lower</h1>
-        <p class="text-lg text-gray-300 mb-6">¿Cuál tiene más reproducciones en Spotify?</p>
-        <button (click)="startGame()" class="bg-cyan-500 hover:bg-cyan-600 text-white px-6 py-3 rounded-lg font-semibold shadow-lg transform transition hover:scale-105">
+    <div *ngIf="!showMoods && !showCategories && !showOptions" @fadeIn class="flex flex-col items-center justify-center bg-gif">
+        <h1 class="text-4xl lg:text-8xl font-bold text-cyan-400 mb-4 animate-bounce honk">Higher or Lower</h1>
+        <p class="text-2xl text-gray-300 mb-6 germania flex gap-2 items-center justify-center">
+        <fa-icon [icon]="faSpotify" class="text-green-500 text-4xl"></fa-icon>
+        Spotify's Version.</p>
+        <button (click)="startGame()" class="bg-green-600 hover:bg-green-500 text-white px-6 py-3 rounded-lg font-semibold shadow-lg transform transition hover:scale-105 sen w-1/2">
             Comenzar
         </button>
     </div>
     <!-- Seleccionar Mood -->
-    <div *ngIf="showMoods && !showCategories" class="mt-8">
-        <h2 class="text-2xl font-semibold mb-4">Elegir el modo de juego</h2>
-        <div class="flex flex-col gap-4">
-            <button *ngFor="let mood of moods" (click)="selectMood(mood)" class="bg-blue-500 hover:bg-blue-600 px-4 py-2 rounded-md">
-                {{ mood }}
+    <div *ngIf="showMoods && !showCategories" @fadeIn class="flex flex-col gap-6 md:w-3/4">
+        <h2 class="text-5xl font-semibold mb- reenie">Elegir el modo de juego</h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-8 p-4">
+            <button *ngFor="let mood of moods" (click)="selectMood(mood)" class="card"
+            [ngStyle]="{ 'background-image': 'url(img/' + mood + '.gif)' }">
+                <span class="honk text-3xl md:text-5xl overlay">{{ mood.toUpperCase() }}</span>
             </button>
-        </div>
-        <button (click)="goStart()" class="mt-4 text-gray-400 underline">Volver</button>
+          </div>
+        <button (click)="goStart()" class="flex items-center justify-center">
+            <fa-icon [icon]="faCircleLeft" 
+            class="text-gray-500 text-2xl p-2 rounded-xl">
+            </fa-icon>
+            <p class="text-gray-400 hover:underline reenie text-2xl ">Volver</p>
+        </button>
     </div>
     <!-- Seleccionar Categories -->
-    <div *ngIf="showCategories" class="mt-8">
-        <h2 class="text-2xl font-semibold mb-4">Elige una categoria</h2>
-        <div class="flex flex-col gap-4">
-            <button (click)="selectCategory('artist')" class="bg-purple-500 hover:bg-purple-600 px-4 py-2 rounded-md">Por Artista</button>
-            <button (click)="selectCategory('genre')" class="bg-green-500 hover:bg-green-600 px-4 py-2 rounded-md">Por Género</button>
+    <div *ngIf="showCategories" @fadeIn class="flex flex-col gap-6 md:w-3/4">
+        <h2 class="text-5xl font-semibold mb- reenie">Elige una categoria</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-8 p-4">
+                <button (click)="selectCategory('artist')" class="card"
+                [ngStyle]="{ 'background-image': 'url(img/artista.gif)' }">
+                <span class="honk text-3xl md:text-5xl overlay">ARTISTA</span>
+            </button>
+            <button (click)="selectCategory('genre')"  class="card"
+            [ngStyle]="{ 'background-image': 'url(img/genero.gif)' }">  <span class="honk text-3xl md:text-5xl overlay">GENERO</span>
+        </button>
         </div>
         <button (click)="goBackMood()" class="mt-4 text-gray-400 underline">Volver</button>
     </div>
     <!-- Seleccionar Option -->
-    <div *ngIf="showOptions" class="mt-8">
-        <h2 class="text-2xl font-semibold mb-4">Selecciona un {{ selectedCategory }}</h2>
-        <div class="flex flex-col gap-4">
-            <button *ngFor="let option of options" (click)="startGameWithSelection(option)" class="bg-blue-500 hover:bg-blue-600 px-4 py-2 rounded-md">
-                {{ option }}
+    <div *ngIf="showOptions" @fadeIn class="flex flex-col gap-6 w-5/6 md:w-3/4">
+        <h2 class="text-5xl font-semibold mb- reenie">Selecciona un {{ selectedCategory }}</h2>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-8 p-4">
+            <button *ngFor="let option of options" 
+                (click)="startGameWithSelection(option)" 
+                class="card"
+                [ngStyle]="{ 'background-image': 'url(img/' + sanitizeOption(option) + '.gif)' }">
+                <span class="honk text-3xl lg:text-5xl overlay">{{option}}</span>
             </button>
         </div>
         <button (click)="goBackToCategories()" class="mt-4 text-gray-400 underline">Volver</button>
